	PR c++/12163 	* call.c (perform_direct_initialization): Correct logic for 	direct-initialization of a class type.

PR c++/12146
	* pt.c (lookup_template_function): Robustify.

	PR c++/12163
	* g++.dg/expr/static_cast4.C: New test.

	PR c++/12146
	* g++.dg/template/crash9.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71115 138bc75d-0d04-0410-961f-82ee72b054a4